[gd_scene load_steps=4 format=3 uid="uid://bg4n6jwlesj1o"]

[ext_resource type="Script" path="res://PlayQuiz/AnswerContainer.gd" id="1_3xwto"]
[ext_resource type="StyleBox" uid="uid://lr75ncsg3vbm" path="res://Fonts/button_style.tres" id="1_xl50d"]
[ext_resource type="LabelSettings" uid="uid://j4am0nttevp" path="res://Fonts/normal_text.tres" id="3_p24iu"]

[node name="AnswerContainer" type="HBoxContainer" groups=["AnswerContainer"]]
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 16
script = ExtResource("1_3xwto")

[node name="AnswerButton" type="CheckButton" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_xl50d")
theme_override_styles/hover = ExtResource("1_xl50d")
button_pressed = true
text_overrun_behavior = 2

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2
disabled = true
button_pressed = true

[node name="AnswerLabel" type="Label" parent="."]
layout_mode = 2
text = "An agreement or a contract between parties that terminates their civil 
dispute"
label_settings = ExtResource("3_p24iu")
